<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">842238692523479</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="send">Send</string>
    <string name="enter_username">Enter UserName</string>
    <string name="single_chat">Single Chat</string>
    <string name="group_chat">Group Chat</string>
    <string name="receive_push_notification">Receive Push Notification</string>
    <string name="login">Login</string>
    <string name="refere_spalsh_activity_class_for_the_image_loading">Refere Spalsh Activity Class for the Image Loading</string>
    <string name="title_activity_background_image">BackgroundImage</string>

</resources>
