<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pulse.firebasechat.LoginActivity">

    <EditText
        android:id="@+id/et_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:hint="@string/enter_username"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/rg_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_user_name"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/rb_private_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/single_chat" />

        <RadioButton
            android:id="@+id/rb_public_chat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/group_chat" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/cb_receive_push_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_layout"
        android:layout_marginTop="25dp"
        android:checked="true"
        android:text="@string/receive_push_notification" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_receive_push_notification"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/btn_login"
        android:layout_marginTop="20dp"
        android:text="@string/login" />

</RelativeLayout>
